src/components/modal/modal.css
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 100;
}

.modal-content {
  background-color: white;
  padding: 20px;
  border-radius: 8px;
  width: 90%;
  max-width: 1000px;
  max-height: 90vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.modal-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  flex-grow: 1;
  padding: 0 10px;
}

.modal-image {
  max-width: 100%;
  max-height: 80vh;
  object-fit: contain;
}

.modal-details {
  margin-top: 15px;
  text-align: center;
  overflow: hidden;
}

.modal-details h2 {
  font-size: 20px;
  margin-bottom: 10px;
}

.modal-details p {
  font-size: 14px;
  color: #666;
}

.modal-details button {
  margin-top: 10px;
  padding: 8px 16px;
  background-color: var(--bg-navbar);
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.modal-details button:hover {
  background-color: black;
}

.modal-buttons {
  display: flex;
  gap: 8px;
  justify-content: center;
}

.modal-video-card {
  width: 100%;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  overflow: hidden;
  position: relative;
  box-shadow: 2px 2px var(--shadow-color);
  background-color: rgba(0, 0, 0, 0.6);
  position: relative;
}

.modal-video-card video {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.modal-video-card h3 {
  position: absolute;
  top: 16px;
  right: 16px;
  color: white;
}

@media (max-width: 768px) {
  .modal-content {
    max-width: 90%;
    padding: 15px;
  }

  .modal-body {
    padding: 0 15px;
  }

  .modal-image {
    max-height: 50vh;
  }

  .modal-details h2 {
    font-size: 18px;
  }

  .modal-details p {
    font-size: 12px;
  }

  .modal-details button {
    padding: 6px 12px;
  }
}

@media (max-width: 480px) {
  .modal-content {
    max-width: 100%;
    padding: 10px;
  }

  .modal-body {
    padding: 0 5px;
  }

  .modal-image {
    max-height: 40vh;
  }

  .modal-details h2 {
    font-size: 16px;
  }

  .modal-details p {
    font-size: 12px;
  }

  .modal-details button {
    padding: 6px 10px;
  }
}

